--- a/assignment-3/demostyle.css
+++ b/assignment-3/demostyle.css
@@ -2,10 +2,22 @@ body{
     background-color:#333333;
 }
 h1{
-    color:#333;
-    background-color:#CBE830;
+    color:#ffffff;
+    background-color:#666666;
+    font-weight:normal;
 }
 p{
     background-color:#666666;
     color:#ffffff;
+}
+.first-paragraph{
+    font-size:30px;
+    font-family:"Roboto Slab","Montserrot",arial,sans-serif;
+    border-left:5px solid red;
+    border-bottom:2px solid white;
+    font-weight:bold;
+    text-decoration:underline;
+    font-style:italic;
+    padding:30px;
+    margin:120;
 }
