--- a/assignment-3/style.css
+++ b/assignment-3/style.css
@@ -75,3 +75,68 @@ a.nav-link:hover{
     text-align:center;
     
 }
+
+/*footer*/
+footer{
+    background-color:#333;
+    color:#999;
+    padding:20px;
+    text-align:center;
+    
+}
+.footer-link{
+    color:#AB10A;
+    text-decoration:none;
+    
+}
+.footer-link:hover{
+    color:#D69E00;
+    text-decoration:underline;
+}
+
+
+/*search*/
+.search-placeholder{
+    width:600px;
+    height:400px;
+    background-color:#ddd;
+    margin:20px auto;
+    padding:20px;
+}
+/*assignments*/
+.assignments-list{
+    border:4px solid #ddd;
+    padding:20px;
+    margin:20px;
+    width:860px;
+}
+/*coffee*/
+.coffee-quote{
+    font-size:30px;
+    color:#16445f;
+    
+}
+.menu{
+    border:4px solid #ddd;
+    text-align:left;
+    padding:20px;
+    
+}
+.dt{
+    font-size:20px;
+    font-weight:bold;
+    margin-bottom:5px;
+    
+}
+.dd{
+    color:#666;
+    margin-left:20px;
+    margin-bottom:20px;
+}
+/*about*/
+.about-list-container{
+    border:4px solid #ddd;
+    text-align: left;
+    padding:20px;
+    margin:20px;
+}
